[project]
name = "searxng"
version = "2.0.0"
description = "A privacy-respecting, hackable metasearch engine"
authors = [
]
dependencies = [
    "certifi==2024.2.2",
    "babel==2.14.0",
    "flask-babel==4.0.0",
    "flask==3.0.2",
    "jinja2==3.1.3",
    "lxml==5.1.0",
    "pygments==2.17.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.1",
    "httpx[http2]==0.24.1",
    "Brotli==1.1.0",
    "uvloop==0.19.0",
    "httpx-socks[asyncio]==0.7.7",
    "setproctitle==1.3.3",
    "redis==5.0.2",
    "markdown-it-py==3.0.0",
    "fasttext-predict==0.9.2.2",
    "pytomlpp==1.0.13",
]
readme = "README.rst"
requires-python = ">= 3.8"

[project.scripts]
searxng-run = "searx.webapp:run"
searxng-checker = "searx.search.checker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mock==5.1.0",
    "nose2[coverage_plugin]==0.14.1",
    "cov-core==1.15.0",
    "black==24.2.0",
    "pylint==3.1.0",
    "splinter==0.21.0",
    "selenium==4.18.1",
    "Pallets-Sphinx-Themes==2.1.1",
    "Sphinx<=7.1.2; python_version == '3.8'",
    "Sphinx==7.2.6; python_version > '3.8'",
    "sphinx-issues==4.0.0",
    "sphinx-jinja==2.0.2",
    "sphinx-tabs==3.4.5",
    "sphinxcontrib-programoutput==0.17",
    "sphinx-autobuild==2021.3.14",
    "sphinx-notfound-page==1.0.0",
    "myst-parser==2.0.0",
    "linuxdoc==20231020",
    "aiounittest==1.4.2",
    "yamllint==1.35.1",
    "wlc==1.14",
    "coloredlogs==15.0.1",
]

[tool.rye.scripts]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["searx"]

[tool.pylint]
max-line-length = 160
